--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -57,3 +57,6 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+Style/EndOfLine:
+  EnforcedStyle: lf
+  
