--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,6 +40,8 @@ Style/DefWithParentheses:
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 
+Layout/EndOfLine:
+  EnforcedStyle: lf
 Layout/HashAlignment:
   EnforcedColonStyle: key
 Layout/ExtraSpacing:
