fix rubocop issues

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -60,5 +60,5 @@ Style/HashTransformKeys:
 Style/HashTransformValues:
   Enabled: false
 Style/EndOfLine:
-  EnforcedStyle: lf
+  EnforcedStyle: crlf
   
